forge/tests/error/is_theorem_disabled.frg
#lang forge

test expect { 
  {} is checked
}
